Set mentor expectations for week 5 & 6.
Align mentor expectations with feedback we'll collect in week 6. We
should have introduced some of these mentor expectations in a week 3 &
4 expectations section, but this is the best we can do for now.
Iterative improvements!

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -81,6 +81,7 @@ Community Guide | Outreachy Documentation
 	<li><a href="#Internship">Internship</a>
 		<ul>
 			<li><a href='#week-1-expectations'>Week 1 and 2: Expectations for mentors</a></li>
+			<li><a href='#week-5-expectations'>Week 5 and 6: Expectations for mentors</a></li>
 		</ul>
 	</li>
 </ol>
@@ -639,6 +640,51 @@ Some times project mentors <a href="#contribution-evaluation">evaluated the cont
 		<p><i>Intern skills goals:</i> Mentors should discuss what type of work the intern has enjoyed in the past, and what type of work or challenges they would like to tackle during the internship. Mentors should ask what skills the intern would like to learn during the internship.</p>
 		<p><i>Intern career goals:</i> Mentors should discuss with their intern what their career goals are. If the intern does not know what career they want to pursue, the mentor can discuss the different career options they know of.</p>
 		<p><i>Project modification:</i> If possible, mentors may want to modify the project goals to better align with skills the intern wants to learn, the type of work they want to do, what challenges they want to tackle, and their career goals.</p>
+	</li>
+</ol>
+</p>
+
+<h3 id='week-5-expectations'><a href='#week-5-expectations'>Week 5 and 6: Expectations for mentors</a></h3>
+
+<p>Outreachy organizers have the following expectations for mentors during week 5 and 6 of the internship:
+<ol>
+	<li>
+		<p><b>Clearing up doubts.</b></p>
+		<p><i>Answer intern questions:</i> Mentors should continue to answer questions from interns. We expect that the frequency of the questions will decrease, but the complexity of the questions will increase. Mentors should encourage interns to ask more of their questions on public community chat, forum, or mailing lists. However, they should not refuse to answer questions sent privately.</p>
+		<p><i>Office hours:</i> Mentors should still have a scheduled time each day when they can answer intern questions via chat.</p>
+	</li>
+	<li>
+		<p><b>Tracking progress.</b></p>
+		<p><i>Weekly meeting:</i> Mentors and interns should continue their weekly phone or video chats. These weekly meetings will likely cover more complex topics. Mentors may notice their intern talking more during these weekly meetings, as they gain more experience on their project.</p>
+		<p><i>Daily stand-up:</i> Mentors and interns should continue their daily stand ups. Mentors may notice the daily stand ups become shorter, as interns raise questions, issues, and barriers to their work more frequently outside of stand up.</p>
+		<p><i>Intern blog:</i> Mentors should work with their intern on their blog post that explains their project to a newcomer. If mentors have not yet, the blog post is a great excuse to introduce your intern to the wider open source community, or promote your intern on social media.</p>
+	</li>
+	<li>
+		<p><b>Giving acknowledgment and praise.</b></p>
+		<p><i>Acknowledgment of effort:</i> Mentors should acknowledge how much the intern's skills have improved since the beginning of the internship. Mentors should praise the effort and hard work the intern put into their project.</p>
+		<p><i>Positive feedback:</i> Mentors should give concrete positive feedback about the intern's contributions. Saying "thank you" is great, but saying "Thank you for this contribution, I really appreciate how much time you put into refactoring it" is better. Tell your intern how their contributions will positively impact your open source community, the people who use your open source project, or the world.</p>
+	</li>
+	<li>
+		<p><b>Giving feedback.</b></p>
+		<p><i>Communication skills:</i> If interns are hesitant to participate in the public community chat, mentors should talk through their fears and encourage them. Mentors should encourage interns to communicate more on public open source community forums.</p>
+		<p><i>Team work skills:</i> Mentors should encourage interns to submit draft contributions for review, rather than trying to get everything perfect. Mentors should coach interns on how to revise their contributions based on feedback. Mentors may still have to step in during architectural or design discussions to advocate for the intern.</p>
+		<p><i>Contribution skills:</i> Mentors should continue to coach interns on improving their project skills. Mentors are encouraged to share advanced resources and tools. Some interns may find advanced tools on their own, and share them with mentors.</p>
+		<p><i>Critical thinking skills:</i> Interns should be more independent about debugging issues on their own before asking for help. However, mentors and interns are still likely to have pair programming or pair debugging sessions to work through complex issues.</p>
+	</li>
+	<li>
+		<p><b>Teaching about open source.</b></p>
+		<p><i>Design discussions:</i> Mentors should encourage interns to have design discussions with community members. It's important to teach interns that the open source community rarely has "the right answer" for very complex design questions. Empower your intern to research their own solutions, and present them to your open source community. Mentors may still need to step in to help their interns articulate their solutions in these discussions.</p>
+		<p><i>Open source conferences:</i> Mentors should talk to their interns about free software or open source conferences they might want to attend.</p>
+	</li>
+	<li>
+		<p><b>Creating networking opportunities.</b></p>
+		<p><i>Community networking:</i> Mentors should encourage interns to communicate on public open source community chat, forums, and mailing lists. Mentors are encouraged to personally introduce their intern to community members are knowledgeable about particular topics. A personal introduction makes it more likely that community members will answer your intern's questions, coach them on skills, or give them career advice.</p>
+		<p><i>Promotion:</i> Mentors should read and discuss the intern's blog posts with the intern. Mentors should promote the blog posts to their open source community and on social media. Mentors should praise and promote their intern's contributions, both to their open source community and on social media.</p>
+	</li>
+	<li>
+		<p><b>Encouraging career development.</b></p>
+		<p><i>Intern skills goals:</i> Mentors and interns should have a check-in about what skills the intern wanted to learn during this internship. Check to see if the contributions the intern is working on will meet those goals. If not, you may want to consider modifying the project goals.</p>
+		<p><i>Intern career goals:</i> Mentors and interns should have a check-in about whether the internship is helping with the intern's career goals. Check to see if the intern wants to pursue more networking, and if so, introduce them to more people who may help them meet their career goals.</p>
 	</li>
 </ol>
 </p>
