Fix time comments help text.
The time_commitment field in the BaseInternFeedback model currently has
help text that says "(Optional) If you have not been working 40 hours a
week, please let us know why..."

Outreachy shifted to asking interns to work 30 hours per week instead of
40 hours per week. This change is effective as of the December 2021
cohort. It's possible we might want to change the number of hours in the
future as well.

Override the help text in the intern feedback #1 form template, rather
than doing a database migration. The new intern feedback #2 form already
overrides this help text as well.

TODO: override this text for feedback #3 and #4 templates.

--- a/home/templates/home/feedback1fromintern_form.html
+++ b/home/templates/home/feedback1fromintern_form.html
@@ -50,7 +50,7 @@ Initial internship feedback
 		<hr>
 		<h2>5. Intern progress</h2>
 	{% endif %}
-	{% if 'average number of hours per week' in field.label_tag %}
+	{% if 'Time comments' in field.label_tag %}
 		<div class="form-group card">
 			{{ field.errors }}
 			<div class = "card-header">
@@ -59,9 +59,7 @@ Initial internship feedback
 			<div class = "card-body">
 				{{ field }}
 			</div>
-			{% if field.help_text %}
-				<div class="card-footer bg-white">{{ field.help_text }}</div>
-			{% endif %}
+			<div class="card-footer bg-white"><p>(Optional) If you have not been working 30 hours per week, please let us know why. We want to support you, so let us know if there's anything we can do to help</p></div>
 		</div>
 	{% else %}
 		<div class="form-group card">
