Show intern blog link (or missing) in staff view of feedback #1
If the mentor and intern disagree about whether the intern has created a
blog, it can be helpful to check if the intern has recorded their blog
URL in their Outreachy website account. It can also be helpful to be
able to follow the link to the blog to see if the intern has created a
blog but not actually created blog posts yet.

--- a/home/templates/home/initial_feedback.html
+++ b/home/templates/home/initial_feedback.html
@@ -215,7 +215,8 @@ Initial Feedback for {{ current_round.official_name }}
 									<button class="btn btn-warning">No</button>
 								{% endif %}
 							{% endif %}
-						<td>Has the intern created a blog?</td>
+						<td>Has the intern created a blog? {% if not i.applicant.applicant.blog_url %}Missing{% else %}<a href="{{ i.applicant.applicant.blog_url }}">Present</a>{% endif %}
+						</td>
 					</tr>
 					<tr>
 						<td colspan="3"><b>4. Mentor support</b></td>
