Fix broken link to project listing page for applicants

--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -95,7 +95,9 @@ Outreachy internships working with {{ community.name }}
 		{% endif %}
 
 		{% if approved_coordinator %}
-			{% include 'home/snippet/coordinator_action.html' %}
+			{% with participation=participation_info %}
+				{% include 'home/snippet/coordinator_action.html' %}
+			{% endwith %}
 		{% endif %}
 
 
