--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -135,7 +135,7 @@ Outreachy Internships | Apply | Pick a Project
 
 	{% for participation, projects in ontime_projects %}
 	{% with community=participation.community funded_interns=participation.interns_funded %}
-		<h4 id='{{ community.slug }}'>{{ community.name }} - {{ funded_interns }} intern{{ funded_interns|pluralize }}</h4>
+		<a href="#{{ community.slug }}"><h4 id='{{ community.slug }}'>{{ community.name }} - {{ funded_interns }} intern{{ funded_interns|pluralize }}</h4></a>
 		<p>{{ community.description }}</p>
 		{% if role.is_approved_applicant or role.is_volunteer %}
 			{% if not current_round.contributions_close.has_passed %}
@@ -150,6 +150,9 @@ Outreachy Internships | Apply | Pick a Project
 		{% with project_status="" %}
 			{% include 'home/snippet/projects_for_round_page.html' %}
 		{% endwith %}
+		{% if not projects %}
+			<p>No projects listed yet.</p>
+		{% endif %}
 	{% endwith %}
 	{% endfor %}
 {% endif %}
