--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -27,6 +27,7 @@ Community Guide | Outreachy Documentation
 			<li><a href='#community-types'>Community types</a>
 				<ul>
 					<li><a href='#community-types-open-source-projects'>Community types: open source projects</a></li>
+					<li><a href='#community-types-open-science-projects'>Community types: open science projects</a></li>
 					<li><a href='#community-types-non-profits'>Community types: non-profits</a></li>
 				</ul>
 			</li>
@@ -45,7 +46,6 @@ Community Guide | Outreachy Documentation
 			<li><a href="#outreachy-general-fund">Outreachy general fund</a>
 				<ul>
 					<li><a href='#funding-during-cfp'>Outreachy general fund: All intern funding</a></li>
-					<li><a href='#wellcome-trust-funding'>Wellcome Trust funding: All intern funding</a></li>
 					<li><a href='#partial-general-funding'>Outreachy general fund: Additional intern funding</a></li>
 					<li><a href='#general-funding-stats'>How much does the Outreachy general fund sponsor?</a></li>
 					<li><a href='#general-funding-decision-making'>How do you decide who gets Outreachy general funding?</a></li>
@@ -155,30 +155,84 @@ Community Guide | Outreachy Documentation
 
 <p>New communities must meet these rules to be eligible to participate in Outreachy. The Outreachy organizers and the Outreachy Project Leadership Committee (PLC) will review the community's application to ensure they meet our participation rules.</p>
 
+<p>We encourage communities with more than 5 core contributors to participate. However, this is not a strict requirement.</p>
+
+<p>Each section below will list guidelines for the types of communities that can participate in Outreachy.</p>
+
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
 <h3 id='community-types'><a href='#community-types'>2.1 Community types</a></h3>
 
-<p>Two types of communities can participate in Outreachy:</p>
+<p>Three types of communities can participate in Outreachy:</p>
 <ul>
-	<li>open source projects</li>
+	<li>open source communities</li>
+	<li>open science communities</li>
 	<li>non-profit organizations</li>
 </ul>
 
-<h3 id='community-types-open-source-project'><a href='#community-types-open-source-project'>2.1.1. Community types: open source project</a></h3>
+<h3 id='community-types-open-source-projects'><a href='#community-types-open-source-projects'>2.1.1. Community types: open source project</a></h3>
 
-<p>All free software communities that participate in Outreachy need to be well-established. Core team members (either paid or volunteer) should be regularly contributing to the community.</p>
+<h4>Open source practices</h4>
 
-<p>Outreachy interns benefit from working with a variety of community members who can help review their work and answer questions.</p>
+<p>All open source communities that participate in Outreachy need to be focused on open, public work.</p>
 
-<p>We encourage communities with more than 5 core contributors to participate. However, this is not a strict requirement.</p>
+<p>We welcome communities who implement any of the following open source practices:</p>
 
-<h3 id='community-types-non-profits'><a href='#community-types-non-profits'>2.1.2. Community types: Non-profits</a></h3>
+<ul>
+	<li>publicly available source code</li>
+	<li>publicly available documentation</li>
+	<li>open, public collaboration</li>
+	<li>public review of work-in-progress</li>
+	<li>public communication</li>
+	<li>open governance</li>
+	<li>community-driven feature roadmap</li>
+	<li>open access</li>
+	<li>open data sets</li>
+	<li>open data science</li>
+</ul>
+
+{% include 'home/snippet/community_eligibility_caveats.html' %}
+
+<h4>Open source internship projects</h4>
+
+<p>Outreachy welcomes several different types of internship projects. Many of our projects are focused on programming. However, any type of open source or open science contribution is welcome. Internship projects can include user advocacy, research, data science, user experience, documentation, design, marketing, or event planning.</p>
+
+<h3 id='community-types-open-science-projects'><a href='#community-types-open-science-projects'>2.1.2 Community types: open science projects</a></h3>
+
+<h4>Open science practices</h4>
+
+<p>All open science communities that participate in Outreachy need to be focused on open, public work.</p>
+
+<p>We welcome communities who implement any of the following open science practices:</p>
+
+<ul>
+	<li>reproducible research</li>
+	<li>open access</li>
+	<li>open data sets</li>
+	<li>open data science</li>
+	<li>open collaboration</li>
+	<li>citizen science</li>
+	<li>using or creating open source software</li>
+</ul>
+
+{% include 'home/snippet/community_eligibility_caveats.html' %}
+
+<h4>Open science internship projects</h4>
+
+<p>Outreachy welcomes several different types of internship projects. Many of our projects are focused on programming. However, any type of open source or open science contribution is welcome. Internship projects can include user advocacy, research, data science, user experience, documentation, design, marketing, or event planning.</p>
+
+<h3 id='community-types-non-profits'><a href='#community-types-non-profits'>2.1.3. Community types: Non-profits</a></h3>
+
+<h4>Non-profit eligibility</h4>
 
 <p>American non-profit 501(c)(3) charities and 501(c)(6) trade organizations can participate as Outreachy mentoring communities. Outreachy organizers will also consider charitable organizations in other countries.</p>
 
 <p>There is no restriction on the size of the charitable organization that can participate in Outreachy.</p>
+
+<h4>Non-profit internship projects</h4>
+
+<p>Outreachy welcomes several different types of internship projects. Many of our projects are focused on programming. However, a programming focus is not required. Past internship projects with non-profits have included things like research, advocacy, documentation, design, marketing, or event planning.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
@@ -285,9 +339,11 @@ Community Guide | Outreachy Documentation
 
 <h3 id='all-general-funding'><a href='#funding-during-cfp'>3.3.1 Outreachy general fund: All intern funding</a></h3>
 
-<p>Humanitarian open source communities are invited to apply to the Outreachy general fund when first signing up to participate in Outreachy. If your community is approved, Outreachy will fully fund at least one intern.</p>
+<p>Open science and humanitarian open source communities are invited to apply to the Outreachy general fund when first signing up to participate in Outreachy. If your community is approved, Outreachy will fully fund at least one intern.</p>
 
-<p>Non-humanitarian open source communities are not eligible for this option.</p>
+<p>Communities that are not humanitarian focused and not focused on open science are not eligible for this option.</p>
+
+<h3 id='humanitarian-funding'><a href='#humanitarian-funding'>3.3.2 Humanitarian funding: All intern funding</a></h3>
 
 <p>To be eligible for intern funding, a humanitarian open source community must be:</p>
 
@@ -299,7 +355,13 @@ Community Guide | Outreachy Documentation
 	<li><b>community</b>: your project should have at least 2-3 people who make regular open source contributions to your project</li>
 </ul>
 
-<h3 id='wellcome-trust-funding'><a href='#wellcome-trust-funding'>3.3.2 Wellcome Trust funding: All intern funding</a></h3>
+<h3 id='open-science-funding'><a href='#open-science-funding'>3.3.3 Open Science funding: All intern funding</a></h3>
+
+<h4 id='czi-funding'>Chan Zuckerberg Initiative funding</h4>
+
+<p>Outreachy is pleased to work with <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> to provide funding for open science interns. Please see our <a href="#community-types-open-science-projects">guidelines for open science communities</a>.</p>
+
+<h4 id='wellcome-trust-funding'>Wellcome Trust funding</h4>
 
 <p>Outreachy is pleased to work with <a href="https://wellcome.org/">Wellcome Trust</a> to provide funding for open science interns. Wellcome Trust is focused on funding Outreachy interns working on open science projects that address urgent health challenges or discovery research.</p>
 
@@ -317,7 +379,7 @@ Community Guide | Outreachy Documentation
 	<li>tackle one of the following challenges: <a href="https://wellcome.org/what-we-do/infectious-disease">infectious diseases</a>, <a href="https://wellcome.org/what-we-do/climate-and-health">the health impacts of climate change</a>, or <a href="https://wellcome.org/what-we-do/mental-health">mental health</a></li>
 </ul>
 
-<h3 id='partial-general-funding'><a href='#partial-general-funding'>3.3.3 Outreachy general fund: Additional intern funding</a></h3>
+<h3 id='partial-general-funding'><a href='#partial-general-funding'>3.3.4 Outreachy general fund: Additional intern funding</a></h3>
 
 <p>As explained in the sections above, communities must find their own funding, or apply for funding from the Outreachy general fund or Wellcome Trust. Once funding for one intern is secured, communities will be approved to participate in Outreachy.</p>
 
@@ -332,18 +394,18 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h3 id='general-funding-stats'><a href='#general-funding-stats'>3.3.4 How much does the Outreachy general fund sponsor?</a></h3>
+<h3 id='general-funding-stats'><a href='#general-funding-stats'>3.3.5 How much does the Outreachy general fund sponsor?</a></h3>
 
 <p>The sponsorship for each Outreachy intern is $6,500 USD.</p>
 
-<p>The Outreachy general fund typically sponsors 5 to 10 interns per cohort. The Outreachy general fund usually sponsors 1 intern per community, but it has occasionally sponsored up to 3 interns per community.</p>
+<p>The Outreachy general fund typically sponsors 10 to 15 interns per cohort. The Outreachy general fund usually sponsors 1 intern per community, but it has occasionally sponsored up to 3 interns per community.</p>
 
 <p>Wellcome Trust typically sponsors 1 to 3 interns per cohort.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h3 id='general-funding-decision-making'><a href='#general-funding-decision-making'>3.3.5 How do you decide who gets Outreachy general funding?</a></h3>
+<h3 id='general-funding-decision-making'><a href='#general-funding-decision-making'>3.3.6 How do you decide who gets Outreachy general funding?</a></h3>
 
 <p>The Outreachy organizers review Outreachy general funding requests after the intern selection deadline. We review Outreachy general funding requests across all communities. Then we apply our criteria to determine which communities get funding.</p>
 
