--- a/home/templates/home/snippet/funding_short_description.html
+++ b/home/templates/home/snippet/funding_short_description.html
@@ -5,7 +5,7 @@
 <ul>
 	<li><b>Humanitarian open source communities</b> can apply for funding from <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy</a></li>
 
-	<li><b>Open science communities</b> can apply for funding from <a href="{% url 'docs-community' %}#wellcome-trust-funding" %}>Wellcome Trust</a></li>
+	<li><b>Open science communities</b> can apply for funding from <a href="{% url 'docs-community' %}#open-science-funding" %}>Outreachy</a></li>
 
 	<li><b>Other open source communities</b> need to find their own funding. Communities might use their own community funds, or find a company to sponsor an intern.</li>
 </ul>
