Tweak privilege acknowledgment for community participation

--- a/home/templates/home/community_participation_rules.html
+++ b/home/templates/home/community_participation_rules.html
@@ -7,9 +7,15 @@ Community participation rules
 {% block content %}
 <h1>Outreachy community sign up</h1>
 
-<p>Outreachy needs open source and open science communities to mentor interns.</p>
+<p>Outreachy welcomes open source projects, open science projects, and non-profits who wish to mentor Outreachy interns.</p>
+
+<p>Outreachy uses the term "community" for your open source project, open science project, or non-profit.</p>
 
 <p>Please review the rules below before signing up your community.</p>
+
+<h2>Questions about eligibility?</h2>
+
+{% include 'home/snippet/community_eligibility_caveats.html' %}
 
 <h2>Participation rules</h2>
 <hr>
