--- a/home/templates/home/snippet/community_eligibility_caveats.html
+++ b/home/templates/home/snippet/community_eligibility_caveats.html
@@ -1,6 +1,7 @@
-<p>Outreachy understands that smaller communities operate differently than larger communities. Some of our rules may not apply to smaller communities.</p>
+<p>Smaller communities will operate differently than larger communities. Some of our rules may not apply to smaller communities.</p>
 
-<p>Outreachy acknowledges that the free software and open source concepts were largely developed by white, cis, western men. We understand that communities in non-western and developing counties will operate differently, and we encourage them to apply!</p>
+<p>Outreachy welcomes mentors from low-income countries and middle-income countries. We also welcome mentors from marginalized groups in the technology or science industry.</p>
+
+<p>Outreachy acknowledges open source and open science is dominated by white, cis, western men. Communities built by marginalized groups in tech or people in low-income or middle-income countries may operate differently than communities built by privileged contributors. We encourage your community to apply, even if you are uncertain that your community will meet our eligibility rules.</p>
 
 <p>If you have questions about if your community is eligible, please <a href="{% url 'contact-organizers' %}">contact Outreachy organizers.</a></p>
-
