Tweak privilege acknowledgment for community participation more
Simplify language to Grade 9 level. (Still not great, but the best I can
do right now.)

Add a direct acknowledgment that some of our rules may not apply to
communities built by less privileged groups.

For example, we encourage mentoring communities to have an open,
publicly available community chat.

However, in India and countries in Africa, internet is usually provided
by expensive mobile data plans. Many data plans don't count data used by
WhatsApp.

Therefore, many open source and open science communities in low-income
and medium-income countries may use a WhatsApp group as a community
chat. When evaluating whether a community should be an Outreachy
mentoring community, we will not hold the chat medium against
communities built by people in low-income and medium-income countries.

--- a/home/templates/home/snippet/community_eligibility_caveats.html
+++ b/home/templates/home/snippet/community_eligibility_caveats.html
@@ -1,7 +1,7 @@
-<p>Smaller communities will operate differently than larger communities. Some of our rules may not apply to smaller communities.</p>
+<p>Some of our rules may not apply to smaller open source or open science communities.</p>
 
-<p>Outreachy welcomes mentors from low-income countries and middle-income countries. We also welcome mentors from marginalized groups in the technology or science industry.</p>
+<p>Outreachy welcomes mentors from low-income and middle-income countries. We also welcome mentors from marginalized groups in the technology or science industry. Some of our rules may not apply to communities built by less privileged groups.</p>
 
-<p>Outreachy acknowledges open source and open science is dominated by white, cis, western men. Communities built by marginalized groups in tech or people in low-income or middle-income countries may operate differently than communities built by privileged contributors. We encourage your community to apply, even if you are uncertain that your community will meet our eligibility rules.</p>
+<p>We encourage your community to apply! Please apply even if you are unsure about our eligibility rules.</p>
 
-<p>If you have questions about if your community is eligible, please <a href="{% url 'contact-organizers' %}">contact Outreachy organizers.</a></p>
+<p>If you have questions about our eligibility rules, please <a href="{% url 'contact-organizers' %}">contact Outreachy organizers.</a></p>
