--- a/home/templates/home/community_participation_rules.html
+++ b/home/templates/home/community_participation_rules.html
@@ -9,7 +9,7 @@ Community participation rules
 
 <p>Outreachy welcomes open source projects, open science projects, and non-profits who wish to mentor Outreachy interns.</p>
 
-<p>Outreachy uses the term "community" for your open source project, open science project, or non-profit.</p>
+<p>For Outreachy, the word <b>community</b> means an open source project, open science project, or non-profit.</p>
 
 <p>Please review the rules below before signing up your community.</p>
 
@@ -17,7 +17,7 @@ Community participation rules
 
 {% include 'home/snippet/community_eligibility_caveats.html' %}
 
-<h2>Participation rules</h2>
+<h2>Eligibility rules</h2>
 <hr>
 
 <h3>1. Mentoring communities must be open source, open science, or a non-profit</h3>
@@ -38,37 +38,35 @@ Community participation rules
 
 </div>
 
-<h3>3. No for-profit communities</h3>
+<h3>3. No proprietary software</h3>
 
 <div class="container mx-4">
 	<p>Outreachy intern projects must <a href="{% url 'docs-community' %}#commercial-ties">not be tied to proprietary software.</a></p>
-
-	<p>Participating communities cannot be tied to only one for-profit company. Please <a href="{% url 'docs-community' %}#commercial-ties">read our rules about commercial ties</a>.</p>
 </div>
 
 <br>
-<h2>Participation requirements</h2>
+<h2>What you need to participate</h2>
 <hr>
 
-<h3>1. Intern funding is required</h3>
+<h3>💵 Intern funding is required</h3>
 
 <div class="container mx-4">
 	<p>Open source communities must find <a href="{% url 'docs-community' %}#intern-funding">internship funding</a> ($6,500 USD per intern):</p>
 	<ul>
-		<li>Humanitarian open source communities can apply for the <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy general fund.</a></li>
-		<li>Open science communities can apply for funding from <a href="{% url 'docs-community' %}#open-science-funding" %}>Outreachy general fund</a></li>
+		<li>Humanitarian open source communities can apply for funding from the <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy general fund.</a></li>
+		<li>Open science communities can apply for funding from the <a href="{% url 'docs-community' %}#open-science-funding" %}>Outreachy general fund</a></li>
 		<li>Other communities must find funding elsewhere, either from community funds or from a community sponsor.</li>
 	</ul>
 	<p>Once funding for one intern is secured, communities can <a href="{% url 'docs-community' %}#partial-general-funding" %}>request additional funding</a> from the Outreachy general fund.</p>
 </div>
 
-<h3>2. A community coordinator is required</h3>
+<h3>🗣️ A community coordinator is required</h3>
 
 <div class="container mx-4">
 	<p>Each community must have a coordinator. A community coordinator is an interface between Outreachy organizers and mentors. Sometimes a community coordinators is also a mentor. <a href="https://www.outreachy.org/mentor/#coordinator">Read about community coordinator duties</a>.</p>
 </div>
 
-<h3>3. A mentor is required</h3>
+<h3>🧑🏽‍🏫 A mentor is required</h3>
 
 <div class="container mx-4">
 	<p>Each community needs to have at least one mentor. A mentor works directly with Outreachy applicants and their intern. Having more than one person mentor an intern ("co-mentoring") is encouraged.</p>
@@ -76,25 +74,27 @@ Community participation rules
 	<p>Mentors must be willing to volunteer at least 5 hours a week during the internship period, and 5-10 hours per week during the application period. <a href="https://www.outreachy.org/mentor/#mentor">Read about mentor duties</a></p>
 </div>
 
-<h3>4. A defined project is required</h3>
+<h3>✍🏿 A defined project is required</h3>
 
 <div class="container mx-4">
 	<p>Each mentor defines a project for their intern to work on. Outreachy does not allow applicants to define their own project. <a href="https://www.outreachy.org/mentor/mentor-faq/#define-a-project">Read about what makes a good Outreachy project.</a></p>
 </div>
 
 <br>
-<h2>Common misconceptions</h2>
+<h2>Common mistakes</h2>
 <hr>
-<h3>1. Interns are not contractors</h3>
+<h3>Interns are not contractors</h3>
 
 <div class="container mx-4">
-	<p>Outreachy interns are <a href="{% url 'docs-community' %}#not-work-for-hire">not contractors for hire</a>. Outreachy's goal is to teach the intern about open source, not to get a particular project done.</p>
+	<p>Outreachy interns are <a href="{% url 'docs-community' %}#not-work-for-hire">not contractors for hire</a>. You cannot hire an Outreachy intern to work on a project you are not experienced in.</p>
+
+	<p>You should not expect an Outreachy intern to complete their project. Outreachy's goal is to teach interns about open source, not to get a particular project completed.</p>
 </div>
 
-<h3>2. Interns are not employees</h3>
+<h3>Interns are not employees</h3>
 
 <div class="container mx-4">
-	<p>Outreachy interns are <a href="{% url 'docs-community' %}#not-employees">not employees</a> of any Outreachy sponsor. Outreachy does not "place" interns with companies.
+	<p>Outreachy interns are <a href="{% url 'docs-community' %}#not-employees">not employees</a> of any Outreachy sponsor. Outreachy does not "place" interns with companies.</p>
 </div>
 
 <br>
