Use open science practices snippet in community guide

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -206,15 +206,7 @@ Community Guide | Outreachy Documentation
 
 <p>We welcome communities who implement any of the following open science practices:</p>
 
-<ul>
-	<li>reproducible research</li>
-	<li>open access</li>
-	<li>open data sets</li>
-	<li>open data science</li>
-	<li>open collaboration</li>
-	<li>citizen science</li>
-	<li>using or creating open source software</li>
-</ul>
+{% include 'home/snippet/open_science_practices.html' %}
 
 {% include 'home/snippet/community_eligibility_caveats.html' %}
 
