Tweak eligibility caveats text

--- a/home/templates/home/snippet/community_eligibility_caveats.html
+++ b/home/templates/home/snippet/community_eligibility_caveats.html
@@ -1,6 +1,6 @@
-<p>Some of our rules may not apply to smaller open source or open science communities.</p>
+<p>Some of our eligibility rules may be more flexible for smaller open source or open science communities.</p>
 
-<p>Outreachy welcomes mentors from low-income and middle-income countries. We also welcome mentors from marginalized groups in the technology or science industry. Some of our rules may not apply to communities built by less privileged groups.</p>
+<p>Outreachy welcomes mentors from low-income and middle-income countries. We also welcome mentors from marginalized groups in the technology or science industry. Some of our community eligibility rules may be more flexible for communities built by less privileged groups.</p>
 
 <p>We encourage your community to apply! Please apply even if you are unsure about our eligibility rules.</p>
 
